@@ -26,3 +26,7 @@ perl:
 script: dzil test -v
 
 sudo: false
+
+env:
+  global:
+    - PERL_USE_UNSAFE_INC=0
