@@ -441,6 +441,28 @@ Specify a minimum Perl version.  If not specified it will be detected.
         print STDERR Term::ANSIColor::color('reset') if -t STDERR;
         print STDERR "\n";
       }
+      
+      if(! defined $travis->{env})
+      {
+        print STDERR Term::ANSIColor::color('bold red') if -t STDERR;
+        print STDERR "Travis no env field";
+        print STDERR Term::ANSIColor::color('reset') if -t STDERR;
+        print STDERR "\n";
+      }
+      elsif(ref($travis->{env}) ne 'HASH')
+      {
+        print STDERR Term::ANSIColor::color('bold red') if -t STDERR;
+        print STDERR "Travis env field is not a hash reference";
+        print STDERR Term::ANSIColor::color('reset') if -t STDERR;
+        print STDERR "\n";
+      }
+      elsif(grep !/PERL_USE_UNSAFE_INC/, @{ $travis->{env}->{global} })
+      {
+        print STDERR Term::ANSIColor::color('bold red') if -t STDERR;
+        print STDERR "Travis env.global does not have reference to PERL_USE_UNSAFE_INC";
+        print STDERR Term::ANSIColor::color('reset') if -t STDERR;
+        print STDERR "\n";
+      }
     }
     
     foreach my $test (map { path($_) } bsd_glob ('t/*.t'))
