@@ -2,6 +2,7 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
   - Use [Author::Plicease::NoUnsafeInc]
+  - Check that PERL_USE_UNSAFE_INC is set correctly in travis.yml
 
 2.24      2017-11-07 08:09:45 -0500
   - Require plicease plugins 2.24
